--- a/main.html
+++ b/main.html
@@ -8,6 +8,37 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+
+	<div>
+		<h1>Spaghetti Recipe</h1>
+		<div>
+			<h1>Ingredients</h1>
+			<ul>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+			</ul>
+		</div>
+		
+		<div>
+			<h1>Instructions</h1>
+			<ol>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				
+			</ol>
+		</div>
+	</div>
+
+
+
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
