--- a/main.html
+++ b/main.html
@@ -14,18 +14,18 @@
 		<div>
 			<h1>Ingredients</h1>
 			<ul>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
+				<li>Spaghetti</li>
+				<li>Marinara Sauce</li>
+				<li>Salt</li>
+				<li>Water</li>
 			</ul>
 		</div>
 		
 		<div>
 			<h1>Instructions</h1>
 			<ol>
-				<li></li>
-				<li></li>
+				<li>Bring water to a boil.</li>
+				<li>Add spaghetti to boiling water.</li>
 				<li></li>
 				<li></li>
 				<li></li>
