--- a/main.html
+++ b/main.html
@@ -26,8 +26,8 @@
 			<ol>
 				<li>Bring water to a boil.</li>
 				<li>Add spaghetti to boiling water.</li>
-				<li></li>
-				<li></li>
+				<li>Add salt to taste.</li>
+				<li>Cook for 10 minutes, stirring occasionally.</li>
 				<li></li>
 				<li></li>
 				<li></li>
