--- a/main.html
+++ b/main.html
@@ -28,9 +28,9 @@
 				<li>Add spaghetti to boiling water.</li>
 				<li>Add salt to taste.</li>
 				<li>Cook for 10 minutes, stirring occasionally.</li>
-				<li></li>
-				<li></li>
-				<li></li>
+				<li>Add marinara sauce to a pan, bringing to a simmer.</li>
+				<li>Mix cooked spaghetti with marinara sauce.</li>
+				<li>Enjoy!</li>
 				
 			</ol>
 		</div>
